# godot-wiimote

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  SConstruct
.github/workflows/: builds.yml
cmake/: godot-engine-configuration.cmake
demo/: Etihad_Stadium.jpg.import  Menu.gd  Menu.tscn  main.tscn  mote.gd  mousemove.gd  picture.gd  picture.tscn  project.godot  target.png.import  targets.tscn
docs/: index.md
project/: gdwiimote.gdextension  mousemove.gd
src/: gdwiimote.cpp  gdwiimote.h  register_types.cpp  wiiuse.cpp
